@@ -68,13 +68,6 @@ tasks.withType<KotlinCompile>().configureEach {
   }
 }
 
-tasks.withType<Test>().configureEach {
-  jvmArgs(
-    "--add-opens=java.base/java.lang=ALL-UNNAMED",
-    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-  )
-}
-
 dependencies {
   kapt(libs.dagger.compiler)
   implementation(projects.circuit)
